# SIMPLE

./: .fprettify  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Alpha_lifetime_vmec_c.mk  BATCH_SPLINES_IMPLEMENTATION.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_FIELD_ANALYSIS_REPORT.md  Canonical_coordinates.mk  DESIGN.md  GVEC.md  GVEC_COMPARISON.md  LICENSE  Makefile  README.md  Steps to use SIMPLE.md  TODO.md  bench.in  benchmark_orbit  build.sh  build_and_test.sh  build_and_test_clean.sh  build_coverage.sh  build_output.txt  canonical_baseline.txt  check_signatures.sh  compare_with_golden.sh  compute_scaling_factor.py  create_1d_radial_plots.py  detailed_field_analysis.py  fpm.toml  gvec_plot.py  modernize_types.sh  pr_162_diff.txt  pyproject.toml  requirements.txt  (+5 more)
SRC/: .spline_vmec_data.f90.kate-swp  CMakeLists.txt  alpha_lifetime.f90  alpha_lifetime_c.f90  alpha_lifetime_mod_m.f90  before_25.11.canonical_coordinates.f90  bench.f90  binsrc.f90  boozer_converter.f90  callback.f90  canonical_coordinates.f90  canonical_coordinates_chris.f90  canonical_coordinates_mod.f90  chamb_m.f90  check_orbit_type.f90  classification.f90  collis_alphas.f90  common.f90  cut_detector.f90  field.f90  field_can.f90  find_bminmax.f90  get_canonical_coordinates.f90  interpolate.f90  libneo  magfie.f90  main.f90  main_mpi.f90  nctools_module.f90  neo_orb.f90  new_vmec_allocation_stuff.f90  odeint_allroutines.f  odeint_rkf45.f90  old.canonical_coordinates.f90  old.get_canonical_coordinates.f90  orbit_symplectic.f90  orbit_symplectic_base.f90  orbit_symplectic_euler.f90  orbit_symplectic_euler_2.f90  orbit_symplectic_euler_vpar.f90  (+36 more)
SRC/contrib/: CMakeLists.txt  rkf45.f90
SRC/coordinates/: coordinates.f90
SRC/field/: field_base.f90  field_can_albert.f90  field_can_base.f90  field_can_boozer.f90  field_can_flux.f90  field_can_meiss.f90  field_can_test.f90  field_vmec.f90  psi_transform.f90
SRC/magfie/: magfie.f90  magfie_base.f90  magfie_coils.f90  magfie_vmec.f90
SRC/nleq1/: linalg_nleq1.f  main_nleq1.f  main_nleq1_easy.f  makefile  nleq1.f  nleq1_dat.nrm  nleq1_easy.nrm  nleq1_out.nrm  nleq1e.f  readme
python/:  cp_expl_impl.py  .gitignore  CMakeLists.txt  DELETE.py  README.md  README.txt  README_KISS.md  bench_interface.py  bench_stell_cut.py  bench_stell_cut_highorder.py  bench_tok.py  bench_tok_cut.py  common.py  cp_runge_kutta.py  cp_sym_midpoint.py  cpp_expl_impl.py  cpp_impl_expl.py  cpp_lagrange.py  cpp_runge_kutta.py  cpp_sym_euler.py  cpp_sym_midpoint.py  cpp_var_midpoint.py  discrete_variational.py  example_simple_usage.py  exportfig.py  f2py_f2cmap  field_correct_test.py  field_test.py  impl_expl_euler.py  impl_pendulum.py  manifolds.py  neo-orb.py  particle_tracing.py  pauli_lagrange  pauli_particle.py  plotale.py  pysimple.py  rk.py  simple.in  simple.py  (+7 more)
python/bench/: bench_interface.py  bench_tok.py
python/docs/: api_reference.md  simple_guide.md  user_guide.md
python/examples/: README.md  basic_batch_processing.py  basic_usage.py  kiss_demo.py  large_scale_streaming.py  performance_comparison.py  scientific_analysis.py
python/iaea2019/: bench_tok_cut.py  exportfig.py  neo-orb.py  neo_orb_fffi.py  orbits_and_cuts.py  plot_field.py  plot_field_standalone.jl  plot_orbits.py  visualize.py
python/jax/: draft_pendulum.py
python/pysimple/: __init__.py  _backend.py  _bminmax.py  boozer_chartmap.py  coil_clearance.py  engineering.py  gvec_export.py  particles.py  plotting.py  results.py  samplers.py
python/simple/: __init__.py  _backend.py
python/test_delete_later/: field.py  main.py  mainHam.py  mainLa.py  util.py
src/: CMakeLists.txt  VMEC_DEPENDENCIES.md  binsrc.f90  boozer_converter.F90  boozer_converter.f90  boozer_data_mod.F90  callback.f90  chamb_m.f90  check_orbit_type.f90  classification.f90  collis_alphas.f90  coords.f90  cut_detector.f90  diag_counters.f90  field.F90  field.f90  field_can.f90  field_line_spectre.f90  field_pauli_cart.f90  find_bminmax.f90  get_canonical_coordinates.F90  get_canonical_coordinates.f90  interface_crossing.f90  lapack_interfaces.f90  linalg_lu_device.f90  magfie.f90  magfie_can_boozer.f90  magfie_coils.f90  magfie_wrapper.f90  netcdf_orbit_output.f90  netcdf_results_output.f90  new_vmec_allocation_stuff.f90  odeint_rkf45.f90  orbit_cp_explicit.f90  orbit_cpp.f90  orbit_cpp_boris.f90  orbit_cpp_canonical.f90  orbit_cpp_chartmap_metric.f90  orbit_cpp_pauli.f90  orbit_cpp_vmec_metric.f90  (+47 more)
src/contrib/: CMakeLists.txt  LICENSE.minpack  minpack.f90  minpack_interfaces.f90  rkf45.f90
src/coordinates/: array_utils.f90  cartesian_coordinates.f90  coordinate_scaling.f90  coordinates.f90  gvec_reference_coordinates.f90  reference_coordinates.f90  scaled_chartmap_coordinates.f90  stencil_utils.f90
src/diag/: diag_albert.f90  diag_meiss.f90  diag_newton.f90  diag_orbit.f90
src/field/: batch_spline_helpers.f90  batch_spline_migration.f90  boozer_cartesian.f90  boozer_chartmap_io.f90  boozer_field_metric.f90  field_analytical_gs.f90  field_base.f90  field_booz_xform.f90  field_boozer_chartmap.f90  field_can_albert.f90  field_can_albert_batch.f90  field_can_base.f90  field_can_boozer.f90  field_can_flux.f90  field_can_meiss.f90  field_can_meiss_batch.f90  field_can_spectre.f90  field_can_test.f90  field_coils.f90  field_coils_batch.f90  field_coils_cyl.f90  field_geoflux.f90  field_gvec.f90  field_newton.F90  field_newton.f90  field_splined.f90  field_vmec.f90  psi_transform.f90  vmec_field_adapter.f90  vmec_field_eval.f90  vmec_field_metric.f90
src/gvec/: gvec_export_data.f90
src/ode/: ode_integrator_base.f90  ode_integrator_factory.f90  ode_integrator_libneo.f90  ode_integrator_rk4.f90  ode_integrator_vode.f90
src/util/: vmec_to_chartmap.f90
src/wall/: chartmap_metadata.f90  stl_wall_cgal.cpp  stl_wall_intersection.F90
test/python/: CMakeLists.txt  performance_benchmark.py  pysimple.py  test_batch_api.py  test_chartmap_boundary_param.py  test_classification_api.py  test_classify_parity.py  test_coil_clearance.py  test_deterministic_dependency_flags.py  test_engineering.py  (+11 more)
(+566 files in other folders)
